added JMV internal quesitons